Fix frame toggle btn alignment

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -981,7 +981,6 @@
     float: right;
     .square(18px);
     padding: 0;
-    margin-top: -3px;
     line-height: 18px;
     font-size: 9px;
     text-align: center;
